--- a/app/src/main/webapp/index.html
+++ b/app/src/main/webapp/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>ola mundo!</h1>
+    <form action="bemvindo.jsp">
+        <input type="text" name="nome" />
+        <input type="submit" value="enviar" />
+    </form>
 </body>
 </html>
