--- a/app/src/main/webapp/index.html
+++ b/app/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>ola mundo!</h1>
-    <form action="bemvindo.jsp">
+    <form action="bemvindo.jsp" method="post">
         <input type="text" name="nome" />
         <input type="submit" value="enviar" />
     </form>
