--- a/app/src/main/webapp/index.html
+++ b/app/src/main/webapp/index.html
@@ -12,5 +12,11 @@
         <input type="text" name="nome" />
         <input type="submit" value="enviar" />
     </form>
+
+    <ul>
+        <li><a href="while.jsp">While</a></li>
+        <li><a href="doWhile.jsp">Do-While</a></li>
+        <li><a href="foreach.jsp">For-Each</a></li>
+    </ul>
 </body>
 </html>
